--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ conda create -n env_name python=3.10 cudatoolkit=11.7 matplotlib pytorch pytorch
 or 
 
 conda install cudatoolkit=11.7 matplotlib pytorch pytorch-cuda=11.7 pyg pickleshare cloudpickle networkx ipykernel jupyter pandas pycapnp -c pytorch -c nvidia -c pyg
+
+conda install ffmpeg -c conda-forge
+
+#also install ffmpeg for video rendering on the os
