changing to transformer based encoding and decoding to test + adding parameters that were previously not used like cell radius and border placement + previous results

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,6 @@ conda install cudatoolkit=11.7 matplotlib pytorch pytorch-cuda=11.7 pyg picklesh
 
 conda install ffmpeg -c conda-forge
 
+pip3 install adamp #this is a pytorch optimizer but not in the official realease
+
 #also install ffmpeg for video rendering on the os
