shifting on the 2d plane, also multiple messages

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-conda create -n env_name python=3.10 cudatoolkit=11.7 matplotlib pytorch pytorch-cuda=11.7 pyg pickleshare cloudpickle networkx ipykernel jupyter pandas pycapnp -c pytorch -c nvidia -c pyg
+conda create -n env_name python=3.10 cudatoolkit=11.7 matplotlib pytorch pytorch-cuda=11.7 pyg pickleshare cloudpickle networkx ipykernel jupyter pandas pycapnp -c pytorch -c nvidia -c pyg -c conda-forge
 
 or 
 
-conda install cudatoolkit=11.7 matplotlib pytorch pytorch-cuda=11.7 pyg pickleshare cloudpickle networkx ipykernel jupyter pandas pycapnp -c pytorch -c nvidia -c pyg
+conda install cudatoolkit=11.7 matplotlib pytorch pytorch-cuda=11.7 pyg pickleshare cloudpickle networkx ipykernel jupyter pandas pycapnp -c pytorch -c nvidia -c pyg -c conda-forge
 
 conda install ffmpeg -c conda-forge
 
