--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,6 @@ conda install ffmpeg -c conda-forge
 
 pip3 install adamp #this is a pytorch optimizer but not in the official realease
 
+conda install -c conda-forge statsmodels
+
 #also install ffmpeg for video rendering on the os
