slight changes to datas and comparisons

--- a/.gitignore
+++ b/.gitignore
@@ -142,8 +142,6 @@ result*.pkl
 loss*.pkl
 Params*
 
-animation_(recursive_)?[0-9]*.mp4
-
-animation_(recursive_)?traj_[0-9]*.mp4
+*animation_*
 
 test*
